--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,51 +1,64 @@
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    height: 100%;
-    background: #222;
-    font-family: sans-serif;
-    font-style: italic;
+:root {
+  --main-background-colour: #222;
+  --menu-background-colour: #111;
+  --menu-text-colour: #818181;
+  --menu-top-padding: 60px;
+  --menu-z-index: 10;
+  --canvas-z-index: 20;
+  --canvas-width: 100%;
 }
 
-.hidden {
-  display: none;
+body {
+  /* Position */
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+  /* View */
+  overflow: hidden;
+  background: var(--main-background-colour);
+
+  /* Font */
+  font-family: sans-serif;
+  font-style: italic;
+  font-size: calc(0.6em + 1vw);
 }
 
 .sidenav {
+  /* Position */
+  top: 0;
+  left: 0;
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
+
+  /* View */
+  padding-top: var(--menu-top-padding);
+  background-color: var(--menu-background-colour);
   overflow-x: hidden;
-  padding-top: 60px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
+  z-index: var(--menu-z-index);
   display: inline-block;
+
+  /* Font */
+  text-decoration: none;
+  color: var(--menu-text-colour);
 }
 
 .sidenav a,
 .sidenav label,
 .sidenav input {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 25px;
-  height: 25px;
-  width: 200px;
+  padding: 0.4em;
+  font-size: 1.2em;
+  width: 8em;
   display: inline-block;
-  color: #818181;
 }
 
 .sidenav input {
-  width: 100px;
+  width: 3em;
 }
 
 canvas {
-  position : relative ;
-  z-index : 1000;
-  width : 100%;
+  width: var(--canvas-width);
+  position: relative;
+  z-index: var(--canvas-z-index);
 }
