--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
-  height: 100%;
+  height: 100vh;
   background-color: black;
+}
+
+.container {
   display: flex;
   flex-flow: row;
+}
+
+.hidden {
+  display: none;
 }
