--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,27 @@
   display: flex;
   flex-flow: row;
 }
+
+.loading-spinner {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  animation: loading-spinner-spin 1s linear infinite;
+  border: 20px solid var(--loading-spinner-outer-color, rgba(0, 0, 0, 0.3));
+  border-top: 20px solid var(--loading-spinner-inner-color, rgba(0, 0, 0, 1));
+  margin: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+@keyframes loading-spinner-spin {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
