--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-* {
-  overflow: hidden;
-}
-
 .App {
   height: 100vh;
   background-color: black;
@@ -20,11 +16,8 @@
   border: 20px solid var(--loading-spinner-outer-color, rgba(255, 255, 255, 0.3));
   border-top: 20px solid var(--loading-spinner-inner-color, rgb(255, 255, 255));
   margin: auto;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  position: relative;
+  top: calc(50% - 100px);
 }
 
 .hidden {
