--- a/src/components/eye/Eye.css
+++ b/src/components/eye/Eye.css
@@ -3,7 +3,7 @@
 }
 
 .Eyelid path {
-    fill : #202020;
-    stroke:#101010;
-    stroke-width:20;
+    fill : black;
+    stroke:black;
+    stroke-width:2;
 }
