--- a/src/components/eye/Eye.css
+++ b/src/components/eye/Eye.css
@@ -7,3 +7,9 @@ path, circle {
     stroke:black;
     stroke-width:2;
 }
+
+.BlackFill path {
+    fill : black;
+    stroke:black;
+    stroke-width:2;
+}
