--- a/src/components/eye/Eye.css
+++ b/src/components/eye/Eye.css
@@ -1,8 +1,14 @@
 path, circle {
-    transition: 100ms;
+    transition: 50ms;
 }
 
 .Eyelids path {
+    fill : black;
+    stroke:black;
+    stroke-width:2;
+}
+
+.BlackFill path {
     fill : black;
     stroke:black;
     stroke-width:2;
