--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.App, .Error {
+.App,
+.Error {
   height: 100vh;
   background-color: black;
 }
@@ -10,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width:100%;
+  width: 100%;
 }
 
 .container {
@@ -23,7 +24,8 @@
   height: 160px;
   border-radius: 50%;
   animation: loading-spinner-spin 1s linear infinite;
-  border: 20px solid var(--loading-spinner-outer-color, rgba(255, 255, 255, 0.3));
+  border: 20px solid
+    var(--loading-spinner-outer-color, rgba(255, 255, 255, 0.3));
   border-top: 20px solid var(--loading-spinner-inner-color, rgb(255, 255, 255));
   margin: auto;
   position: relative;
@@ -36,10 +38,9 @@
 
 @keyframes loading-spinner-spin {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
-
