--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.App, .Error {
+.App,
+.Error {
   height: 100vh;
   background-color: black;
 }
@@ -10,12 +11,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width:100%;
+  width: 100%;
 }
 
 .container {
   display: flex;
   flex-flow: row;
+}
+
+.loading-spinner {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  animation: loading-spinner-spin 1s linear infinite;
+  border: 20px solid
+    var(--loading-spinner-outer-color, rgba(255, 255, 255, 0.3));
+  border-top: 20px solid var(--loading-spinner-inner-color, rgb(255, 255, 255));
+  margin: auto;
+  position: relative;
+  top: calc(50% - 100px);
 }
 
 .hidden {
@@ -24,10 +38,9 @@
 
 @keyframes loading-spinner-spin {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
-
