--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,18 @@
   width:100%;
 }
 
+.loading-spinner {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  animation: loading-spinner-spin 1s linear infinite;
+  border: 20px solid var(--loading-spinner-outer-color, rgba(255, 255, 255, 0.3));
+  border-top: 20px solid var(--loading-spinner-inner-color, rgb(255, 255, 255));
+  margin: auto;
+  position: relative;
+  top: calc(50% - 100px);
+}
+
 .container {
   display: flex;
   flex-flow: row;
