--- a/src/components/eye/Eye.css
+++ b/src/components/eye/Eye.css
@@ -9,3 +9,15 @@
     stroke: black;
     stroke-width: 2;
 }
+
+.pupil {
+    fill: url(#pupilGradient);
+}
+
+.sclera {
+    fill: url(#scleraGradient);
+}
+
+.iris {
+    fill: url(#irisGradient);
+}
