rebased master and converted detectionSelectors detectionReducer and detections actions from tsx to ts. Removed setting widht and height from canvas element - instead the width is set to 100% through CSS

--- a/src/components/configMenu/ConfigMenu.css
+++ b/src/components/configMenu/ConfigMenu.css
@@ -29,8 +29,6 @@
     font-size: 1.2em;
 
     transition: 500ms;
-
-    overflow: hidden;
 }
 
 .ConfigMenu a,
@@ -44,4 +42,8 @@
 
 .ConfigMenu input {
     width: 25%;
+}
+
+.ConfigMenu #canvas {
+    width: 100%;
 }
