fixed scrollbar not going down far enough

--- a/src/components/configMenu/ConfigMenu.css
+++ b/src/components/configMenu/ConfigMenu.css
@@ -12,7 +12,7 @@
     /* Position */
     top: 0;
     left: 0;
-    height: 100%;
+    height: calc(100% - var(--menu-top-padding));
     width: 0;
     position: fixed;
 
