--- a/src/components/configMenu/ConfigMenu.css
+++ b/src/components/configMenu/ConfigMenu.css
@@ -2,7 +2,6 @@
     --main-background-colour: #222;
     --menu-background-colour: #111;
     --menu-text-colour: #818181;
-    --menu-top-padding: 60px;
     --menu-z-index: 10;
     --canvas-z-index: 20;
     --canvas-width: 100%;
@@ -12,12 +11,11 @@
     /* Position */
     top: 0;
     left: 0;
-    height: calc(100% - var(--menu-top-padding));
+    height: 100%;
     width: 0;
     position: fixed;
 
     /* View */
-    padding-top: var(--menu-top-padding);
     background-color: var(--menu-background-colour);
     overflow-x: hidden;
     z-index: var(--menu-z-index);
@@ -37,16 +35,17 @@
 .ConfigMenu select,
 .ConfigMenu h1 {
     padding: 10px;
-    width: calc(var(--canvas-width) / 2);
+    width: 50%;
     display: inline-block;
+    margin: 0;
 }
 
 .ConfigMenu input {
-    width: calc(var(--canvas-width) / 4);
+    width: 25%;
 }
 
 .ConfigMenu select {
-    width: calc(var(--canvas-width) / 2.9);
+    width: 35%;
 }
 
 .ConfigMenu #canvas {
@@ -61,5 +60,7 @@
     text-align: center;
     background: rgb(61, 61, 61);
     display: inline-block;
-    top: -0.25em;
+    position: absolute;
+    top: 1em;
+    right: 1em;
 }
