--- a/src/components/configMenu/ConfigMenu.css
+++ b/src/components/configMenu/ConfigMenu.css
@@ -1,7 +1,7 @@
 :root {
-    --main-background-colour: #222;
-    --menu-background-colour: #111;
-    --menu-text-colour: #818181;
+    --main-background-colour: #ffffff;
+    --menu-background-colour: #ffffff;
+    --menu-text-colour: #000000;
     --menu-z-index: 10;
     --canvas-z-index: 20;
     --canvas-width: 100%;
