--- a/src/components/configMenu/ConfigMenu.css
+++ b/src/components/configMenu/ConfigMenu.css
@@ -1,6 +1,7 @@
 :root {
-    --menu-background-colour: #111;
-    --menu-text-colour: #818181;
+    --main-background-colour: #ffffff;
+    --menu-background-colour: #ffffff;
+    --menu-text-colour: #000000;
     --menu-z-index: 10;
     --canvas-z-index: 20;
     --canvas-width: 100%;
@@ -35,7 +36,6 @@
 .ConfigMenu h1,
 .ConfigMenu h3 {
     padding: 10px;
-    width: 50%;
     display: inline-block;
     margin: 0;
 }
@@ -70,4 +70,47 @@
     width: 70%;
     height: 3em;
     left: 15%;
+}
+
+.MuiFormControlLabel-root {
+    width: 100% !important;
+}
+
+.MuiCheckbox-colorPrimary {
+    position: absolute !important;
+    left: 90%;
+    padding: 0px !important;
+}
+
+.MuiFormControlLabel-label {
+    position: absolute;
+    left: 1%;
+}
+
+.h3,
+.MuiFormControl-root,
+#standard-number {
+    width: 100%;
+}
+
+.selectForm,
+.textFieldInput {
+    width: 90%;
+    position: absolute;
+    left: 5%;
+}
+
+.checkbox {
+    padding: 10px;
+    height: fit-content;
+}
+
+.slider {
+    left: 5%;
+    width: 90% !important;
+}
+
+.MuiFormControl-marginNormal {
+    margin-top: 0px !important;
+    margin-bottom: 16px !important;
 }
