--- a/src/components/eye/Eye.css
+++ b/src/components/eye/Eye.css
@@ -2,6 +2,7 @@
     fill: black;
     stroke: black;
     stroke-width: 2;
+    position: absolute;
 }
 
 .BlackFill path {
@@ -9,8 +10,27 @@
     fill-rule: evenodd;
     stroke: black;
     stroke-width: 2;
+    position: absolute;
 }
 
-.inner {
+.inner,
+g.reflection {
     transform-origin: center;
+}
+
+svg.overlay {
+    transform-origin: center;
+    position: absolute;
+}
+
+div.container {
+    height: 100%;
+    width: 100%;
+}
+
+.LEFT,
+.RIGHT {
+    display: inline-block;
+    height: 100%;
+    width: 50%;
 }
