--- a/src/App.css
+++ b/src/App.css
@@ -20,31 +20,8 @@
     flex-flow: row;
 }
 
-.loading-spinner {
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    animation: loading-spinner-spin 1s linear infinite;
-    border: 20px solid
-        var(--loading-spinner-outer-color, rgba(255, 255, 255, 0.3));
-    border-top: 20px solid
-        var(--loading-spinner-inner-color, rgb(255, 255, 255));
-    margin: auto;
-    position: relative;
-    top: calc(50% - 100px);
-}
-
 .hidden {
     display: none;
-}
-
-@keyframes loading-spinner-spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
 }
 
 .fadeInText {
@@ -61,4 +38,61 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+}
+
+.spinner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.spinner > div {
+    height: 50px;
+    background-color: transparent;
+    font-size: 50px;
+    padding: 5px;
+
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner > div > img {
+    max-width: 200px;
+    height: auto;
+}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0);
+    }
+    40% {
+        -webkit-transform: scale(1);
+    }
+}
+
+@keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    }
+    40% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
 }
