--- a/src/App.css
+++ b/src/App.css
@@ -45,12 +45,14 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: row;
 }
 
 .spinner > div {
-    height: 50px;
+    display: flex;
+    width: 10vw;
     background-color: transparent;
-    font-size: 50px;
     padding: 5px;
 
     display: inline-block;
@@ -59,7 +61,7 @@
 }
 
 .spinner > div > img {
-    max-width: 200px;
+    width: 100%;
     height: auto;
 }
 
